--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
 	</div>
 	
 	<div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-		 <p style="color: black">Desenvolvido por <a class="footer" href="">Everton Riquetti</a></p> 
+		 <p style="color: black">Desenvolvido por <a class="footer" href="https://evertonriquetti.github.io/ProjetoSiteFinal/">Everton Riquetti</a></p> 
 	</div>
 
 </footer>
